# password-app

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  package.json  tailwind.config.ts  tsconfig.json
.github/workflows/: ci.yaml
databases/: database.db
public/queries/: BaseQueries.sql
resources/css/: input.css  output.css
resources/js/pages/: add.js  generate.js  list.js  manage.js  settings.js
resources/js/window/: buttons.js
resources/views/: add.html  generate.html  index.html  list.html  manage.html  settings.html
scripts/: format.sh  setup-hooks.sh
src/: index.ts  main.cpp
src/app/: MainApplication.cpp  MainApplication.h  MainWindow.cpp  MainWindow.h
src/database/: DatabaseManager.cpp  DatabaseManager.h
src/database/models/accounts/: Account.h  AccountCreatePayload.h  AccountRole.h  AccountUpdatePayload.h  RawAccount.h
src/database/models/passwords/: Password.h  PasswordCreatePayload.h  PasswordUpdatePayload.h  RawPassword.h
src/database/services/accounts/: AccountsRoleConverter.cpp  AccountsRoleConverter.h  AccountsService.cpp  AccountsService.h
src/database/services/base/: BaseDatabaseService.h
src/database/services/passwords/: PasswordsConverter.cpp  PasswordsConverter.h  PasswordsService.cpp  PasswordsService.h
src/globals/: AppDatabase.ts  DesktopWindow.ts  EnvironmentVariables.ts  PasswordHashing.ts
src/globals/app/: MainApplication.cpp  MainWindow.cpp  MainWindow.h
src/globals/managers/data/: UUIDManager.cpp  UUIDManager.h
src/globals/managers/security/: EncryptionManager.cpp  EncryptionManager.h
src/globals/scripts/: preload.ts
src/globals/types/: EnvironmentVariablesTypes.ts
src/scripts/: DatabaseConfiguration.ts
